--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,9 @@ nav {
 .guest-button:hover {
   background-color: rgb(234, 234, 234);
 }
+.login-button:hover {
+  background-color: rgb(234, 234, 234);
+}
 .navbar-menu-container svg {
   font-size: 1.5rem;
   cursor: pointer;
